# vfc_neat

./: .gitignore  .gitmodules  CMakeLists.txt  README.md
include/: neat_connection.h  neat_innovation_tracker.h  neat_node.h
src/: neat_connection.c  neat_innovation_tracker.c  neat_node.c
test/: CMakeLists.txt
test/src/: neat_connection.test.c  neat_innovation_tracker.test.c  neat_node.test.c
